--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 }
 
 body {
-    background-color: #f6f6f6;
+    background-color: #283747;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .container {
